# product-name-normalizer

./: .env.example  .gitignore  CLAUDE.md  GEMINI.MD  README.md  main.py  product.csv  prompt.txt  pyproject.toml  test_connection.py  test_max_iterations.py  test_r1.py
docs/superpowers/plans/: 2026-04-15-logging-iteration-plan.md
docs/superpowers/specs/: 2026-04-15-logging-iteration-design.md
